release 1.0.2 (2009-01/02)
- Fixed issue 183
  https://jersey.dev.java.net/issues/show_bug.cgi?id=183
  Query parameters may be built for a WebResource as follows:
    r.queryParam("a", "foo").queryParam("b", "bar").get(String.class)
- Fixed issue 196
  https://jersey.dev.java.net/issues/show_bug.cgi?id=196
  Removal of filters, using Filterable.removeFilter, no longer causes an
  exception.
- Fixed issue 196
  https://jersey.dev.java.net/issues/show_bug.cgi?id=196
  Conversion of an Object that is a header value will use the Object.toString()
  method if a header delegate cannot be found. For example,
     return Response.noContent().
                    header("X-INTEGER", 1).
                    build();
  will build a 204 response with a header "X-INTEGER: 1".
- jersey-archive module added to provide archive files that include the
  set of Jersey jars and JavaDoc. See:
  http://download.java.net/maven/2/com/sun/jersey/jersey-archive/
- Fixed issue 191
  https://jersey.dev.java.net/issues/show_bug.cgi?id=191
  ResourceConfig.isProviderClass and ResourceConfig.isRootResourceClass return
  false if the class parameter is null.
  This fixes an issue with the SpringComponentProviderFactory throwing an NPE
  for abstract Spring beans.
- Added support for a RenderedImage provider for consuming and producing images.
  For producing images the Java type must be assignable to RenderedImage. Any
  media type that is compatible with "image/*" is supported, but the actual
  image formats supported is restricted to the image readers registered with
  the Java imaging API.
  When consuming images the Java type RenderedImage or BufferedImage may be used.
  The media types supported for consuming are "image/*" and 
  "application/octet-stream". For the former the actual image formats supported
  is restricted to the image writers registered with the Java imaging API.
  For the latter the Java image API will determine the appropriate